--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Feb 21 18:53:44 SAST 2019
-sdk.dir=/home/rmurdoch/Android/Sdk
+#Wed Feb 20 00:22:42 SAST 2019
+ndk.dir=/home/user/Android/Sdk/ndk-bundle
+sdk.dir=/home/user/Android/Sdk
