--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,12 +32,17 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
     //implementation 'androidx.appcompat:appcompat:1.1.0-alpha02'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
-// Map components
     implementation 'com.google.android.gms:play-services-maps:16.1.0'
     implementation 'com.google.android.gms:play-services-location:16.0.0'
     implementation 'com.google.android.gms:play-services-places:16.0.0'
+    implementation 'com.android.support:appcompat-v7:28.1.1'
+    implementation 'com.android.support:design:28.1.1'
     implementation 'com.google.android.libraries.places:places:1.0.0'
-// android support
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.android.support:viewpager:28.0.0'
+    implementation 'androidx.viewpager:viewpager:1.0.0'
+    implementation 'com.android.support:support-v13:+'
+    implementation 'com.google.android.gms:play-services-auth:16.0.0'
     implementation 'com.android.support:appcompat-v7:28.1.1'
     implementation 'com.android.support:design:28.1.1'
     implementation 'com.android.support:recyclerview-v7:28.1.1'
@@ -54,8 +59,4 @@ dependencies {
 // Lifecycle components
     implementation "android.arch.lifecycle:extensions:$rootProject.archLifecycleVersion"
     annotationProcessor "android.arch.lifecycle:compiler:$rootProject.archLifecycleVersion"
-
-    //testImplementation 'junit:junit:4.13-beta-2'
-    //androidTestImplementation 'androidx.test.ext:junit:1.1.1-alpha01'
-    //androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.2-alpha01'
 }
